Implemented RequiredPropertyRule that checks the @Required annotation configuration ASSIGNED - refs #669: Display warning when @Required dependency is not set